<LinearLayout
    tools:context=".ohyeah"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/tableLayout"
    android:background="@color/yellow"
    android:layout_weight="8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:id="@+id/buttonone"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:id="@+id/buttontwo"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:id="@+id/buttonthree"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:id="@+id/buttonfour"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:id="@+id/buttonfive"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:id="@+id/buttonsix"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:id="@+id/buttonseven"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:id="@+id/buttoneight"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:id="@+id/buttonnine"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:id="@+id/buttonten"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eleven"
            android:id="@+id/buttoneleven"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twelve"
            android:id="@+id/buttontwelve"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirteen"
            android:id="@+id/buttonthirteen"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourteen"
            android:id="@+id/buttonfourteen"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen"
            android:id="@+id/buttonfifteen"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_weight="1">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixteen"
            android:id="@+id/buttonsixteen"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seventeen"
            android:id="@+id/buttonseventeen"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eightteen"
            android:id="@+id/buttoneightteen"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundcorner"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_centerHorizontal="true"
        ads:adUnitId="ca-app-pub-5234591008009724/6215154693"
        android:layout_weight="0.5" />


</LinearLayout>